✅ Fix send.feature
It was failing n
CypressError: Timed out retrying: expected '[ <span.spinner__spinner___DVUQ2.spinner>, 30 more... ]' to be 'visible'

This element '[ <span.spinner__spinner___DVUQ2.spinner>, 30 more... ]' is not visible because its content is being clipped by one of its parent elements, which has a CSS property of overflow: 'hidden', 'scroll' or 'auto'

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -43,7 +43,6 @@ body {
     height: calc(100% - 73px);
     display: flex;
     flex-direction: column;
-    overflow: auto;
     background-color: var(--color-budy-bg);
   }
 
